--- a/spring_deep/pom.xml
+++ b/spring_deep/pom.xml
@@ -24,6 +24,11 @@
 			<version>1.3.5</version>
 		</dependency>
 
+		<dependency>
+            <groupId>com.googlecode.rapid-framework</groupId>
+            <artifactId>rapid-generator</artifactId>
+            <version>4.0.6</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
